--- a/environment.yml
+++ b/environment.yml
@@ -29,4 +29,5 @@ dependencies:
       - scikit-learn==1.1.3
       - folium==0.12.1
       - geopandas==0.10.2
-      - plotly 
+      - plotly
+      - kaleido
